--- a/PracticalWorks/CreateLessons/CreateLessons.csproj
+++ b/PracticalWorks/CreateLessons/CreateLessons.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GroupLesson.cs" />
     <Compile Include="Lesson.cs" />
+    <Compile Include="OnlineLesson.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
